<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/jdl1"
                android:textAlignment="center"
                android:textSize="37sp"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="100dp">

                    <EditText
                        android:layout_width="197dp"
                        android:layout_height="match_parent"
                        android:hint="@string/frnm">
                    </EditText>

                    <EditText
                        android:layout_width="194dp"
                        android:layout_height="match_parent"
                        android:hint="@string/lsnm">
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="100dp">

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/placedt"/>
                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/date"/>

                </TableRow>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:hint="@string/add"/>

                <RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/gender"
                        android:textSize="17sp"/>

                    <TableRow

                        android:layout_marginTop="15dp">

                        <RadioButton
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/lk"/>
                        <RadioButton
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/pr"/>

                    </TableRow>

                </RadioGroup>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agama"/>

                        <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/is"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ka"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kr"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kh"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bd"/>
                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hn"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Alrn"/>
                    </RadioGroup>

                </TableRow>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/telp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/Email"/>

                <EditText
                    android:id="@+id/pw1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/pw1">
                    <requestFocus/>
                </EditText>

                <EditText
                    android:id="@+id/pw2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/pw2">
                    <requestFocus/>
                </EditText>

                <TableRow>
                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/back"/>
                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/next"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>